* Bumped to support Groovy 1.8.8
* Fixed a bug in @QueryPipe@ limit, where limit was not decrementing via counting already emitted elements
* Provided a vertex-centric query optimization for @out[0..1]@ type traversals
* Added support for non-zero low range limits in @QueryPipe@
* All transform steps implement new @TransformPipe@ interface (marker interface)

h3. Version 2.1.0 (August 4, 2012)

```xml
<dependency>
  <groupId>com.tinkerpop.gremlin</groupId>
  <artifactId>gremlin-java</artifactId>
  <version>2.1.0</version>
</dependency>

<dependency>
  <groupId>com.tinkerpop.gremlin</groupId>
  <artifactId>gremlin-groovy</artifactId>
  <version>2.1.0</version>
</dependency>
```

* Optimized the pom.xml for both the parent and child projects
* Added Travis continuous integration support
* Restructured the distribution.xml to provide a more "standard" looking directory structure
* Provide support for @Query.limit()@ in query optimization
* Added import static support for @Direction.*@
* Made @gremlin-groovy.sh/bat@ into simply @gremlin.sh/bat@

==<hr/>==

h3. Version 2.0.0 (May 23, 2012)

```xml
<dependency>
  <groupId>com.tinkerpop.gremlin</groupId>
  <artifactId>gremlin-java</artifactId>
  <version>2.0.0</version>
</dependency>

<dependency>
  <groupId>com.tinkerpop.gremlin</groupId>
  <artifactId>gremlin-groovy</artifactId>
  <version>2.0.0</version>
</dependency>
```
* Removed Gremlin-Scala from the main Gremlin distribution
* Added @tree@-step based on the @TreePipe@ to support representing the branch of a traversal
* Added @order@-step based on the @OrderPipe@ to support in-stream ordering
* Removed @VerticesPipe@ and @EdgesPipes@ as should be called via @getVertices()@ and @getEdges()@ in @GremlinPipeline@ constructor
* Added @QueryPipe@ support automated optimizations around @Vertex.query()@
* Added @GremlinPipeline.enablePath()@ to allow for non-automated path enabling