@@ -3,19 +3,14 @@ package com.tinkerpop.gremlin.groovy.jsr223;
 import com.tinkerpop.blueprints.impls.tg.TinkerGraph;
 import com.tinkerpop.blueprints.impls.tg.TinkerGraphFactory;
 import junit.framework.TestCase;
-import org.codehaus.groovy.jsr223.GroovyScriptEngineFactory;
 
 import javax.script.Bindings;
-import javax.script.ScriptContext;
 import javax.script.ScriptEngine;
 import javax.script.ScriptException;
-import java.io.Reader;
-import java.io.Writer;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Random;
-import java.util.UUID;
 import java.util.concurrent.CountDownLatch;
 
 /**
@@ -47,7 +42,6 @@ public class GremlinGroovyScriptEngineTest extends TestCase {
 
     public void testThreadSafety() throws Exception {
         final ScriptEngine engine = new GremlinGroovyScriptEngine();
-        engine.put("g", TinkerGraphFactory.createTinkerGraph());
 
         int runs = 100;
         final CountDownLatch latch = new CountDownLatch(runs);
@@ -59,41 +53,10 @@ public class GremlinGroovyScriptEngineTest extends TestCase {
                 public void run() {
                     String name = names.get(random.nextInt(names.size() - 1));
                     try {
-                        // final String var = "pipe" TODO: the variable is shared across threads
-                        final String var = "a" + UUID.randomUUID().toString().replace("-", "");
-                        final Object result = engine.eval(var + " = g.V('name','" + name + "'); if(" + var + ".hasNext()) { " + var + ".count() } else { null }");
-                        //System.out.println(name);
-                        if (name.equals("stephen") || name.equals("pavel") || name.equals("matthias"))
-                            assertNull(result);
-                        else
-                            assertNotNull(result);
-                    } catch (ScriptException e) {
-                        //System.out.println(e);
-                        assertFalse(true);
-                    }
-                    latch.countDown();
-                }
-            }.start();
-        }
-        latch.await();
-    }
-
-    public void testThreadSafety2() throws Exception {
-        int runs = 100;
-        final CountDownLatch latch = new CountDownLatch(runs);
-        final List<String> names = Arrays.asList("marko", "peter", "josh", "vadas", "stephen", "pavel", "matthias");
-        final Random random = new Random();
-
-        for (int i = 0; i < runs; i++) {
-            new Thread() {
-                public void run() {
-                    String name = names.get(random.nextInt(names.size() - 1));
-                    try {
-                        final ScriptEngine engine = new GremlinGroovyScriptEngine();
-                        engine.put("g", TinkerGraphFactory.createTinkerGraph());
                         final String var = "pipe";
-                        //final String var = "a" + UUID.randomUUID().toString().replace("-", "");
-                        final Object result = engine.eval(var + " = g.V('name','" + name + "'); if(" + var + ".hasNext()) { " + var + ".count() } else { null }");
+                        final Bindings bindings = engine.createBindings();
+                        bindings.put("g", TinkerGraphFactory.createTinkerGraph());
+                        final Object result = engine.eval(var + " = g.V('name','" + name + "'); if(" + var + ".hasNext()) { " + var + ".count() } else { null }", bindings);
                         //System.out.println(name);
                         if (name.equals("stephen") || name.equals("pavel") || name.equals("matthias"))
                             assertNull(result);
@@ -109,6 +72,4 @@ public class GremlinGroovyScriptEngineTest extends TestCase {
         }
         latch.await();
     }
-
-
 }
